{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 63,
  "lineage": "fb32ecde-d207-c392-d6aa-742efe174883",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0901a306fc69125c3",
            "arn": "arn:aws:ec2:us-east-2:367105360882:instance/i-00e062c9fe2717d15",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e062c9fe2717d15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "patrnkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07de679d1120bf994",
            "private_dns": "ip-10-0-1-92.us-east-2.compute.internal",
            "private_ip": "10.0.1.92",
            "public_ip": "18.224.22.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-082a782685b6578a3",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0854de53ac8642b66",
            "tags": {
              "Name": "terraform_EC2-1"
            },
            "tags_all": {
              "Name": "terraform_EC2-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5495848fbc57aaa"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.patriciagw",
            "aws_security_group.allowed_ports",
            "aws_subnet.patriciapubsub",
            "data.aws_ami.web"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0901a306fc69125c3",
            "arn": "arn:aws:ec2:us-east-2:367105360882:instance/i-04748b162153c9094",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04748b162153c9094",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "patrnkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ec190bbc550bb26c",
            "private_dns": "ip-10-0-1-152.us-east-2.compute.internal",
            "private_ip": "10.0.1.152",
            "public_ip": "18.223.102.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b5c75090b3035cd",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0854de53ac8642b66",
            "tags": {
              "Name": "terraform_EC2-2"
            },
            "tags_all": {
              "Name": "terraform_EC2-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0c5495848fbc57aaa"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.patriciagw",
            "aws_security_group.allowed_ports",
            "aws_subnet.patriciapubsub",
            "data.aws_ami.web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "patriciagw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367105360882:internet-gateway/igw-0f2671f1e96798bf7",
            "id": "igw-0f2671f1e96798bf7",
            "owner_id": "367105360882",
            "tags": {
              "Name": "PatriciaVPCgw"
            },
            "tags_all": {
              "Name": "PatriciaVPCgw"
            },
            "vpc_id": "vpc-0d1ceb78f7875c8d3"
          },
          "dependencies": [
            "aws_vpc.patriciaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367105360882:route-table/rtb-0ba683b274e1f7ac9",
            "id": "rtb-0ba683b274e1f7ac9",
            "owner_id": "367105360882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f2671f1e96798bf7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "demo_rt"
            },
            "tags_all": {
              "Name": "demo_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d1ceb78f7875c8d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.patriciagw",
            "aws_vpc.patriciaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b464ba5dff70d7",
            "route_table_id": "rtb-0ba683b274e1f7ac9",
            "subnet_id": "subnet-0854de53ac8642b66"
          },
          "dependencies": [
            "aws_internet_gateway.patriciagw",
            "aws_route_table.demo_rt",
            "aws_subnet.patriciapubsub",
            "aws_vpc.patriciaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allowed_ports",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367105360882:security-group/sg-0c5495848fbc57aaa",
            "description": "Allow Port Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c5495848fbc57aaa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9997,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9997
              }
            ],
            "name": "allowed_ports",
            "name_prefix": "",
            "owner_id": "367105360882",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d1ceb78f7875c8d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.patriciaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patriciaprivsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367105360882:subnet/subnet-08f8218cb240c6c5b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f8218cb240c6c5b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367105360882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformPrivSub"
            },
            "tags_all": {
              "Name": "TerraformPrivSub"
            },
            "vpc_id": "vpc-0d1ceb78f7875c8d3"
          },
          "dependencies": [
            "aws_vpc.patriciaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "patriciapubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367105360882:subnet/subnet-0854de53ac8642b66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0854de53ac8642b66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "367105360882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformPubSub"
            },
            "tags_all": {
              "Name": "TerraformPubSub"
            },
            "vpc_id": "vpc-0d1ceb78f7875c8d3"
          },
          "dependencies": [
            "aws_vpc.patriciaVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "patriciaVPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:367105360882:vpc/vpc-0d1ceb78f7875c8d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081d064cc8c4ef150",
            "default_route_table_id": "rtb-0dab277e85a18cba0",
            "default_security_group_id": "sg-0757151767970a04d",
            "dhcp_options_id": "dopt-22a23d49",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d1ceb78f7875c8d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dab277e85a18cba0",
            "owner_id": "367105360882",
            "tags": {
              "Name": "PatriciaVPC"
            },
            "tags_all": {
              "Name": "PatriciaVPC"
            }
          }
        }
      ]
    }
  ]
}